test/sh/error/oper/rhs_var_bad_type.sk
x := 0

z := 1.0 + x
